--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@ body {
       rgba(0, 0, 0, 0.4),
       rgba(0, 0, 0, 0.4)
     ),
-    url(cmp.jpg);
+    url(comp.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(cmp.jpg);
+    url(comp.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
